WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164142
Partially revert 207805 after resolution in URL spec issue 87
https://bugs.webkit.org/show_bug.cgi?id=164142
Summary
Partially revert 207805 after resolution in URL spec issue 87
Alex Christensen
Reported
2016-10-28 13:21:58 PDT
Partially revert 207805 after resolution in URL spec issue 87
Attachments
Patch
(20.01 KB, patch)
2016-10-28 13:28 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-yosemite
(1.10 MB, application/zip)
2016-10-28 14:26 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews107 for mac-yosemite-wk2
(1.05 MB, application/zip)
2016-10-28 14:30 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews112 for mac-yosemite
(1.76 MB, application/zip)
2016-10-28 14:41 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews121 for ios-simulator-wk2
(12.58 MB, application/zip)
2016-10-28 14:42 PDT
,
Build Bot
no flags
Details
Patch
(22.84 KB, patch)
2016-10-28 15:03 PDT
,
Alex Christensen
aestes
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2016-10-28 13:28:25 PDT
Created
attachment 293198
[details]
Patch
WebKit Commit Bot
Comment 2
2016-10-28 13:30:08 PDT
Attachment 293198
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 3
2016-10-28 14:26:13 PDT
Comment on
attachment 293198
[details]
Patch
Attachment 293198
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/2395049
New failing tests: fetch/fetch-url-serialization.html
Build Bot
Comment 4
2016-10-28 14:26:17 PDT
Created
attachment 293216
[details]
Archive of layout-test-results from ews102 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 5
2016-10-28 14:30:49 PDT
Comment on
attachment 293198
[details]
Patch
Attachment 293198
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/2395067
New failing tests: fetch/fetch-url-serialization.html
Build Bot
Comment 6
2016-10-28 14:30:52 PDT
Created
attachment 293217
[details]
Archive of layout-test-results from ews107 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 7
2016-10-28 14:41:20 PDT
Comment on
attachment 293198
[details]
Patch
Attachment 293198
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/2395065
New failing tests: fetch/fetch-url-serialization.html
Build Bot
Comment 8
2016-10-28 14:41:22 PDT
Created
attachment 293221
[details]
Archive of layout-test-results from ews112 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 9
2016-10-28 14:42:43 PDT
Comment on
attachment 293198
[details]
Patch
Attachment 293198
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/2395083
New failing tests: fetch/fetch-url-serialization.html
Build Bot
Comment 10
2016-10-28 14:42:47 PDT
Created
attachment 293222
[details]
Archive of layout-test-results from ews121 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews121 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Alex Christensen
Comment 11
2016-10-28 15:03:30 PDT
Created
attachment 293225
[details]
Patch
Alex Christensen
Comment 12
2016-10-28 15:04:54 PDT
Comment on
attachment 293225
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=293225&action=review
> LayoutTests/imported/w3c/web-platform-tests/url/url-constructor-expected.txt:135 > -FAIL Parsing: <
http://example.com/foo/%2e./%2e%2e/.%2e/%2e.bar
> against <about:blank> assert_equals: href expected "
http://example.com/..bar
" but got "
http://example.com/foo/%2e./%2e%2e/.%2e/%2e.bar
" > +FAIL Parsing: <
http://example.com/foo/%2e./%2e%2e/.%2e/%2e.bar
> against <about:blank> assert_equals: href expected "
http://example.com/..bar
" but got "
http://example.com/%2e.bar
"
This will be passing once
https://github.com/w3c/web-platform-tests/commit/2e64b13c9f383843ab1cb8e8968f7767905267ea
lands
Alex Christensen
Comment 13
2016-10-28 17:23:43 PDT
http://trac.webkit.org/changeset/208087
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug