Partially revert 207805 after resolution in URL spec issue 87 https://bugs.webkit.org/show_bug.cgi?id=164142

Reviewed by Andy Estes.

LayoutTests/imported/w3c:

* web-platform-tests/url/a-element-expected.txt:
* web-platform-tests/url/a-element-xhtml-expected.txt:
* web-platform-tests/url/url-constructor-expected.txt:

Source/WebCore:

Covered by updated layout tests and API tests.

* platform/URLParser.cpp:
(WebCore::URLParser::isSingleDotPathSegment):
(WebCore::URLParser::isDoubleDotPathSegment):
(WebCore::URLParser::consumeSingleDotPathSegment):
(WebCore::URLParser::consumeDoubleDotPathSegment):
Treat %2e%2e as .. and %2e as . but only if it is entirety of the path segment.
There are tests for URLs like http://host/abc%2edef which have not changed because
the %2e is not the entirety of the path segment.

Tools:

* TestWebKitAPI/Tests/WebCore/URLParser.cpp:
(TestWebKitAPI::TEST_F):

LayoutTests:

* fast/url/path-expected.txt:
* fetch/fetch-url-serialization-expected.txt:



Canonical link: https://commits.webkit.org/181869@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208087 268f45cc-cd09-0410-ab3c-d52691b4dbfc